--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
+  display: flex;
+}
+
+img {
+  display: block;
+  /* width: 100%;
+  max-width: 100%;
+  height: auto; */
+}
+
+a {
+  outline: none;
+  text-decoration: none;
+}
